# 5g-network-slicing-simulator

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-tests.yml
docs/: portfolio-card.md
notebooks/: README.md
scripts/: run_experiment.py
src/slicing_simulator/: __init__.py  assignment.py  cli.py  config.py  data.py  metrics.py  ml.py  plots.py
tests/: test_simulator.py
