[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slicing-simulator"
version = "0.1.0"
description = "5G network slicing simulator with ML-based traffic analysis"
authors = [{name = "Ousmane Traore"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
run-slicing-simulator = "slicing_simulator.cli:main"
